--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
       ADIRA: F.get(item, 'ADIRA'),
       OTO: F.get(item, 'OTO'),
       SINARMAS: F.get(item, 'SINARMAS'),
+      'WOORI FINANCE': F.get(item, 'WOORI FINANCE'),
       'CIMB NIAGA': F.get(item, 'CIMB NIAGA', 'CIMB')
     };
     const photos = [];
@@ -179,6 +180,7 @@
             <p class="text-sm text-gray-600"><strong>OTO</strong><br>${item.bank.OTO || '-'}</p>
             <p class="text-sm text-gray-600"><strong>CIMB NIAGA</strong><br>${item.bank['CIMB NIAGA'] || '-'}</p>
             <p class="text-sm text-gray-600"><strong>SINARMAS</strong><br>${item.bank['SINARMAS'] || '-'}</p>
+             <p class="text-sm text-gray-600"><strong>WOORI FINANCE</strong><br>${item.bank['WOORI FINANCE'] || '-'}</p>
             <p class="text-blue-700 font-bold mt-2">
               ${F.formatRupiah(item.harga)} (OTR)
               <span class="inline-block px-3 py-1 text-sm font-semibold rounded-full ${statusBadgeClass}">
