--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       Total Unit: 
       <span class="text-green-600">READY: ${ready}</span> |
       <span class="text-blue-600">BOOKING: ${booking}</span> |
-      <span class="text-blue-600">COMING SOON: ${comingsoon}</span> 
+      <span class="text-grey-600">COMING SOON: ${comingsoon}</span> 
     `;
 
     listContainer.innerHTML = "";
