--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="bg-gray-100 min-h-screen">
   <header class="bg-gradient-to-r from-blue-800 to-blue-600 text-white text-center py-4 shadow">
-    <h1 class="text-3xl font-bold tracking-wide">RAFFASYA MOTOR</h1>
+    <h1 class="text-3xl font-bold tracking-wide">RAFFASYA MOTOR SUBANG</h1>
     <p class="text-sm opacity-80 mt-1">Daftar Harga Mobil Terbaru</p>
   </header>
 
